<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="edu.lehigh.cse216.teamtin.MainActivity">
    <item
        android:id="@+id/action_home"
        android:orderInCategory="100"
        android:title="Message Board (Home)"
        app:showAsAction="never" />


</menu>