<resources>
    <string name="app_name" translatable="false">TeamTin</string>
    <string name="title_activity_second" translatable="false">SecondActivity</string>
    <string name="title_activity_login" translatable="false">Google Sign in/Out</string>
    <string name="action_settings">Post a New Message</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">item Detail</string>
    <string name="title_activity_vote">voteActivity</string>
    <!-- Sign-in status messages -->
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_in">Signed in</string>
...
