...
            android:layout_weight="4"
            android:orientation="horizontal"
            android:weightSum="2">


            <ImageButton
                android:id="@+id/buttonLike"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/white"
                android:scaleType="fitCenter"
                android:src="@drawable/thumb_up" />

            <ImageButton
                android:id="@+id/buttonDislike"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/white"
                android:scaleType="fitCenter"
                android:src="@drawable/thumb_down" />
...
